use postgresql; remove `/api` from auth controllers
